--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,12 @@
 @import "common/variables";
 
+@import "uikit/src/scss/variables-theme.scss";
+@import "uikit/src/scss/mixins-theme.scss";
+@import "uikit/src/scss/uikit-theme.scss";
+
 html {
     font-size: 62.5%;
+    background: $background;
 }
 body {
     font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
