--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,16 +1,16 @@
 @import "common/variables";
+@import "common/fonts";
 
 @import "uikit/src/scss/variables-theme.scss";
 @import "uikit/src/scss/mixins-theme.scss";
 @import "uikit/src/scss/uikit-theme.scss";
 
+@import "components/header";
+
 html {
-    font-size: 62.5%;
     background: $background;
 }
 body {
-    font-family: Quicksand, 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-    font-size: 1.6rem;
     color: $text-color;
     background: $background;
 }
