Add a OctettrussSVG component.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,6 +6,7 @@
 @import "uikit/src/scss/uikit-theme.scss";
 
 @import "components/header";
+@import "components/top/eyecatch";
 
 html {
     background: $background;
