--- a/src/styles/components/top/_eyecatch.scss
+++ b/src/styles/components/top/_eyecatch.scss
@@ -1,8 +1,78 @@
 .eyecatch {
+    display: flex;
+    justify-content: center;
+    padding-top: 40px;
+    background: linear-gradient(135deg, #161616, #000000);
+
     .octettruss-svg {
         height: 256px;
+
         g {
-            fill: #969696;
+            path {
+                stroke: #969696;
+                fill: #969696;
+
+                &.path {
+                    stroke-dasharray: 5000;
+                    stroke-dashoffset: 0;
+                    stroke-width: 6;
+                    animation: path_anime 2s forwards;
+                }
+                // &:nth-child(1) {
+                //     opacity: 0.0;
+                //     transform: translate(-300px, 300px);
+                //     transition: 200ms ease-out;
+                // }
+                &:nth-child(2) {
+                }
+                &:nth-child(3) {
+                }
+                &:nth-child(4) {
+                }
+                &:nth-child(5) {
+                }
+                &:nth-child(6) {
+                }
+                &:nth-child(7) {
+                }
+            }
+            &:hover {
+                path {
+                    &:nth-child(1) {
+                        opacity: 1.0;
+                        transform: translate(0px, 0px);
+                    }
+                    &:nth-child(2) {   
+                    }
+                    &:nth-child(3) {
+                    }
+                    &:nth-child(4) {                        
+                    }
+                    &:nth-child(5) {
+                    }
+                    &:nth-child(6) {
+                    }
+                    &:nth-child(7) {
+                    }
+                }
+            }
         }
+    }
+}
+
+
+@keyframes path_anime {
+    0% {
+        stroke-dashoffset: 5000;
+        fill: transparent;
+    }
+    70% {
+        stroke-dashoffset: 0;
+    }
+    75% {
+        fill: transparent;
+    }
+    100% {
+        fill: #969696;
     }
 }
