--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -11,6 +11,9 @@
                 font-weight: 400;
             }
         }
+        .uk-navbar-toggle {
+            cursor: pointer;
+        }
     }
 }
 #sidenav {
