--- a/src/styles/components/top/_eyecatch.scss
+++ b/src/styles/components/top/_eyecatch.scss
@@ -4,6 +4,26 @@
     padding-top: 40px;
     background: linear-gradient(135deg, $background-dark, $black);
 
+    .notify {
+        &.notify-enter {
+            opacity: 0;
+            transform: scale(0.9);
+        }
+        &.notify-enter-active {
+            opacity: 1;
+            transform: translateX(0);
+            transition: opacity 300ms, transform 300ms;
+        }
+        &.notify-exit {
+            opacity: 1;
+        }
+        &.notify-exit-active {
+            opacity: 0;
+            transform: scale(0.9);
+            transition: opacity 300ms, transform 300ms;
+        }
+    }
+
     .octettruss-svg {
         height: 256px;
 
