Change to Sticky Header.

--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,10 +1,8 @@
 // Colors
 $brand-primary: #232323;
 $brand-sub: #969696;
-$background: $brand-primary;
+$background: #161616;
 $foreground: $brand-sub;
-
-$background-dark: #161616;
 
 $text-color: $foreground;
 
