--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,9 +11,9 @@
 @import "components/top/eyecatch";
 
 html {
-    background: $background-dark;
+    background: $background;
 }
 body {
     color: $text-color;
-    background: $background-dark;
+    background: $background;
 }
