--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,15 +1,27 @@
-#header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    color: white;
+.header {
+    position: sticky;
+    top: 0px;
+    background: $background;
     z-index: 10;
+}
+
+#header {
+    width: 100%;
+    color: white;
+    
 
     .uk-navbar {
         .uk-navbar-left {
             .uk-logo {
                 font-family: Roboto-thin;
                 font-weight: 400;
+
+                .logo-image {
+                    height: 32px;
+                }
+                .logo-title {
+                    margin-left: 4px;
+                }
             }
         }
         .uk-navbar-toggle {
