--- a/src/styles/components/top/_eyecatch.scss
+++ b/src/styles/components/top/_eyecatch.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     padding-top: 40px;
     height: 300px;
-    background: linear-gradient(135deg, $background-dark, $black);
+    background: linear-gradient(135deg, $background, $black);
 
     .cover {
         position: absolute;
