--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,7 @@
 @import "uikit/src/scss/uikit-theme.scss";
 
 @import "components/header";
+@import "components/footer";
 @import "components/top";
 @import "components/top/eyecatch";
 
