--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,6 +10,7 @@
 @import "components/footer";
 @import "components/top";
 @import "components/top/eyecatch";
+@import "components/detail";
 
 html {
     background: $background;
