Implement Detail Page Features.

--- a/src/styles/components/ui-parts/_workcard.scss
+++ b/src/styles/components/ui-parts/_workcard.scss
@@ -1,6 +1,4 @@
-.detail {
-    padding-bottom: 50px;
-
+.workcard {
     .skills {
         .skill-large {
             display: inline-block;
@@ -9,12 +7,6 @@
             font-size: 0.8rem;
             border: 1px solid $foreground;
             border-radius: 50px;
-        }
-    }
-    .images {
-        img {
-            width: 100%;
-            margin: 12px 0;
         }
     }
 }
