--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,6 +11,7 @@
 @import "components/top";
 @import "components/top/eyecatch";
 @import "components/detail";
+@import "components/ui-parts/workcard";
 
 html {
     background: $background;
