--- a/src/styles/components/_detail.scss
+++ b/src/styles/components/_detail.scss
@@ -1,6 +1,10 @@
 .detail {
     padding-bottom: 50px;
 
+    h1 {
+        font-weight: 300;
+        letter-spacing: 1px;
+    }
     .skills {
         .skill-large {
             display: inline-block;
@@ -10,6 +14,9 @@
             border: 1px solid $foreground;
             border-radius: 50px;
         }
+    }
+    .description {
+        
     }
     .images {
         img {
