--- a/src/styles/components/_detail.scss
+++ b/src/styles/components/_detail.scss
@@ -10,6 +10,7 @@
             display: inline-block;
             padding: 4px 16px;
             margin-right: 8px;
+            margin-bottom: 4px;
             font-size: 0.8rem;
             border: 1px solid $foreground;
             border-radius: 50px;
