Add about section on top

--- a/src/styles/components/_detail.scss
+++ b/src/styles/components/_detail.scss
@@ -12,6 +12,8 @@
             margin-right: 8px;
             margin-bottom: 4px;
             font-size: 0.8rem;
+            font-weight: 200;
+            letter-spacing: 1px;
             border: 1px solid $foreground;
             border-radius: 50px;
         }
