--- a/src/styles/components/ui-parts/_workcard.scss
+++ b/src/styles/components/ui-parts/_workcard.scss
@@ -17,6 +17,7 @@
                 margin: 0;
                 font-size: 0.8rem;
                 font-weight: 100;
+                letter-spacing: 1px;
             }
             .skills {
                 margin-top: 16px;
@@ -28,6 +29,7 @@
                     margin-bottom: 4px;
                     font-size: 0.8rem;
                     font-weight: 200;
+                    letter-spacing: 1px;
                     border: 1px solid $foreground;
                     border-radius: 50px;
                 }
