Add about page.

--- a/src/styles/components/_top.scss
+++ b/src/styles/components/_top.scss
@@ -62,7 +62,7 @@
             }
         }
     }
-    #test-target {
+    #parallax-target {
         overflow: hidden;
         background: linear-gradient(135deg, $background, $black);
         text-align: right;
