--- a/src/styles/components/_detail.scss
+++ b/src/styles/components/_detail.scss
@@ -22,8 +22,13 @@
         
     }
     .images {
+        text-align: center;
+
         img {
             width: 100%;
+            margin: 12px 0;
+        }
+        video {
             margin: 12px 0;
         }
     }
