Fix lint warnings.

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -3,8 +3,12 @@
     text-align: center;
 
     .snses {
-        .uk-icon {
+        a.uk-icon {
             margin: 0 8px;
+            
+            span {
+                display: none;
+            }
         }
     }
 }
