--- a/src/styles/components/_top.scss
+++ b/src/styles/components/_top.scss
@@ -59,6 +59,10 @@
         .snses {
             .uk-icon {
                 margin: 0 8px;
+
+                span { 
+                    display: none;
+                }
             }
         }
     }
