Add Firebase SignIn.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,7 @@
 @import "components/top/eyecatch";
 @import "components/detail";
 @import "components/about";
+@import "components/signin";
 @import "components/ui-parts/workcard";
 
 html {
