--- a/src/styles/common/_layouts.scss
+++ b/src/styles/common/_layouts.scss
@@ -19,14 +19,11 @@ main {
         transition: opacity 300ms, transform 300ms;
     }
     .router-page-exit-active {
-        opacity: 1;
-        transform: translateY(0px);
+        display: none;
     }
     .router-page-exit-done {
-        opacity: 0;
-        transform: translateY(10px);
-        transition: opacity 300ms, transform 300ms;
-    }    
+
+    }
 }
 
 .uk-section {
