--- a/src/styles/components/_signin.scss
+++ b/src/styles/components/_signin.scss
@@ -7,4 +7,8 @@
     h5 {
         text-align: center;
     }
+    .form-error-text{
+        padding: 4px 0;
+        color: $alert-danger-color;
+    }
 }
