--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,6 +6,8 @@
 @import "uikit/src/scss/mixins-theme.scss";
 @import "uikit/src/scss/uikit-theme.scss";
 
+@import "common/controls";
+
 @import "components/header";
 @import "components/footer";
 @import "components/top";
